<resources>
    <string name="app_name">Roomner</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="submit">SUBMIT</string>
    <string name="email">Email</string>
    <string name="still_not_registered">Still not registered ?</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="proceed">Proceed</string>
    <string name="gender">Gender :</string>
    <string name="age">Age :</string>
    <string name="male">Male</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="city">City :</string>
    <string name="how_important_is_this_match_to_you">How important is this match to you?</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="sign_out">Sign Out !!</string>
    <string name="register">REGISTER</string>
    <string name="proceed_to_select_preferences">PROCEED TO SELECT PREFERENCES</string>
    <string name="matches">MATCHES</string>

    <string-array name="age_array">
        <item>Age</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
    </string-array>

    <string-array name="city_array">
        <item>City</item>
        <item>Mumbai</item>
        <item>Bangalore</item>
        <item>Delhi</item>
        <item>Hyderabad</item>
    </string-array>
</resources>